--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "Done Joseph",
-    "name": "Done Joseph | Personal Website",
+    "short_name": "Kunjappan",
+    "name": "Kunjappan",
     "icons": [
       {
         "src": "/images/logo.svg",
