--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,37 @@
 {
-    "short_name": "Kunjappan",
-    "name": "Kunjappan",
-    "icons": [
-      {
-        "src": "/images/logo.svg",
-        "type": "image/svg",
-        "sizes": "192x192"
-      },
-      {
-        "src": "/images/logo.svg",
-        "type": "image/svg",
-        "sizes": "512x512"
-      }
-    ],
-    "start_url": "/index.html",
-    "background_color": "#fff",
-    "display": "standalone",
-    "theme_color": "#4145f1"
-  }
+  "short_name": "Kunjappan",
+  "name": "Kunjappan",
+  "icons": [
+    {
+      "src": "/images/logo.svg",
+      "type": "image/svg",
+      "sizes": "192x192"
+    },
+    {
+      "src": "/images/logo.svg",
+      "type": "image/svg",
+      "sizes": "512x512"
+    }
+  ],
+  "start_url": "/index.html,./css/style.css",
+  "background_color": "#fff",
+  "display": "standalone",
+  "theme_color": "#4145f1",
+  "description": "Kunjappan web designer.",
+  "dir": "auto",
+  "lang": "en",
+  "orientation": "any",
+  "prefer_related_applications": false,
+  "categories": [
+    "business",
+    "social"
+  ],
+  "scope": "https://kunjappan.vercel.app/",
+  "display_override": [
+    "browser",
+    "fullscreen",
+    "standalone",
+    "minimal-ui",
+    "window-controls-overlay"
+  ]
+}
