--- a/manifest.json
+++ b/manifest.json
@@ -33,7 +33,7 @@
   "background_color": "#fff",
   "display": "standalone",
   "theme_color": "#4145f1",
-  "description": "Kunjappan web designer.",
+  "description": "Hi! I’m Kunjappan, and I’m a designer & developer who has passion for building clean web applications with intuitive functionality. I enjoy the process of turning ideas into reality using creative solutions. I’m always curious about learning new skills, tools, and concepts.",
   "dir": "auto",
   "lang": "en",
   "orientation": "any",
