--- a/manifest.json
+++ b/manifest.json
@@ -26,6 +26,11 @@
         "src": "/ios/192.png",
         "type": "image/png",
         "sizes": "192x192"
+      },
+      {
+        "src": "/android/android-launchericon-512-512.png",
+        "type": "image/png",
+        "sizes": "any"
       }
     ],
 
